--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,7 @@ layout: compress
 
 {% include social-links.html %}
 
+<center> Reach us at contact@jeromelithiaote.com </center>
 </div>
 </div>
 </header>
