--- a/_includes/music-releases.html
+++ b/_includes/music-releases.html
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <p>
-          <a href="https://distrokid.com/hyperfollow/j3zz1/a-drop-in-the-ocean"><img width="300px" height="300px" src="{% link img/cover_a-drop-in-the-ocean.png  %}" alt="" data-position="center center" /></a>
+          <a href="https://distrokid.com/hyperfollow/j3zz1/a-drop-in-the-ocean"><img width="300px" height="300px" src="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% link img/cover_a-drop-in-the-ocean.png  %}" alt="" data-position="center center" /></a>
         </p>
         <p>
           <a href="https://distrokid.com/hyperfollow/j3zz1/a-drop-in-the-ocean" class="btn btn-default btn-lg"><span class="network-name">A Drop in the Ocean</span></a>
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <p>
-          <a href="https://distrokid.com/hyperfollow/j3zz1//stereo-woods">  <img width="300px" height="300px" src="{% link img/cover_stereo-woods.png  %}" alt="" data-position="center center" /></a>
+          <a href="https://distrokid.com/hyperfollow/j3zz1//stereo-woods">  <img width="300px" height="300px" src="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% link img/cover_stereo-woods.png  %}" alt="" data-position="center center" /></a>
         </p>
         <p>
           <a href="https://distrokid.com/hyperfollow/j3zz1//stereo-woods" class="btn btn-default btn-lg"><span class="network-name">Stereo Woods</span></a>
