set up for www.j3zz.com

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,9 @@
                         <a class="page-scroll" href="#video-releases">Video</a>
                     </li>
                     <li>
+                        <a href="https://vibrotanica.j3zz.com">VIBROTANICA</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#j3zzlab">#J3ZZLAB</a>
                     </li>
                     <li>
