--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"><img src="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% link img/j3zz logo 300pxwide.png  %}" alt="" data-position="center center" /></h1>
+                        <h1 class="brand-heading"><img src="{% link img/j3zz logo 300pxwide.png  %}" alt="" data-position="center center" /></h1>
 
 
                         <p class="intro-text">{{ site.description }}<br>
