--- a/_includes/j3zzlab.html
+++ b/_includes/j3zzlab.html
@@ -29,7 +29,7 @@
             <p>
               <i>Streamed live on May 23, 2020</i> <br>
               listening to plants and playing along / improvising between analog and digital / video synthesis projection
-              <iframe width="712" height="400" src="https://www.youtube-nocookie.com/embed/wJuN7f5t6kw " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube-nocookie.com/embed/wJuN7f5t6kw " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </p>
           </div>
         </div>
