--- a/_includes/video-releases.html
+++ b/_includes/video-releases.html
@@ -16,7 +16,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <h3>The song of the nightingale</h3>
             <p>
-              <iframe width="712" height="400" src="https://www.youtube-nocookie.com/embed/463eDgFe3V4 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe  src="https://www.youtube-nocookie.com/embed/463eDgFe3V4 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </p>
             <p>
               In the <a href="https://momkult.hu/">MOMkult</a> online series you can get to know Hungarian birds through different artistic mediums. 🐦 They invited me to join in.
@@ -37,7 +37,7 @@ So, I went to the forest with some instruments and paid a tribute to the nightin
           <div class="col-lg-8 col-lg-offset-2">
             <h3>A Drop in the Ocean (music video)</h3>
             <p>
-              <iframe width="712" height="400" src="https://www.youtube-nocookie.com/embed/KXoVQjjpdkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe  src="https://www.youtube-nocookie.com/embed/KXoVQjjpdkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </p>
             <p>
               from 00:00 track 1. Erosion <br />
@@ -59,7 +59,7 @@ So, I went to the forest with some instruments and paid a tribute to the nightin
             <div class="col-lg-8 col-lg-offset-2">
               <h3>Stereo Woods (music video)</h3>
               <p>
-                <iframe width="712" height="400" src="https://www.youtube-nocookie.com/embed/-DyZlkGGLiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe  src="https://www.youtube-nocookie.com/embed/-DyZlkGGLiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </p>
               <p>
       				I made this video with friends. We offer it to you with all our hearts in these rough times. Thanks to Diego Parbuono (film making), Joe Black (camera), Erika Di Benedetto (photography), Zsolt László Kiss (audio recording). </p>
