adding responsiveness to youtube embed via css class

--- a/_includes/video-releases.html
+++ b/_includes/video-releases.html
@@ -15,12 +15,12 @@
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
             <h3>The song of the nightingale</h3>
-            <p>
-              <iframe  src="https://www.youtube-nocookie.com/embed/463eDgFe3V4 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p>
+            <div class="video-container">
+              <iframe src="https://www.youtube-nocookie.com/embed/463eDgFe3V4 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <p>
               In the <a href="https://momkult.hu/">MOMkult</a> online series you can get to know Hungarian birds through different artistic mediums. 🐦 They invited me to join in.
-So, I went to the forest with some instruments and paid a tribute to the nightingale's enchanting songs. 🌳 I sat down and listened. Ideas rushed in and I drafted some sounds. 🌳 Here is for you the result to enjoy in this little music video.
+              So, I went to the forest with some instruments and paid a tribute to the nightingale's enchanting songs. 🌳 I sat down and listened. Ideas rushed in and I drafted some sounds. 🌳 Here is for you the result to enjoy in this little music video.
             </p>
             <p>
               <a href="{{ site.url }}/#music-releases" class="btn btn-default btn-lg"><span class="network-name">LISTEN / STREAM</span></a>
@@ -32,46 +32,46 @@ So, I went to the forest with some instruments and paid a tribute to the nightin
               </p>
             </div>
           </div>
-        <hr>
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-            <h3>A Drop in the Ocean (music video)</h3>
-            <p>
-              <iframe  src="https://www.youtube-nocookie.com/embed/KXoVQjjpdkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p>
-            <p>
-              from 00:00 track 1. Erosion <br />
-              from 12:05 track 2. Downdrift  <br />
-              from 25:33 track 3. High Tide <br />
-            </p>
-            <p>
-              <a href="https://distrokid.com/hyperfollow/j3zz1/a-drop-in-the-ocean" class="btn btn-default btn-lg"><span class="network-name">LISTEN / STREAM</span></a>
-            </p>
-            <p>
-              <i>Music video by J3ZZ performing A Drop in the Ocean. © 2020 Watcha Studios</i> <br />
-              <i>Recorded live during <a href="https://youtu.be/6uYOBfwy8mQ?t=5262">#j3zzlab 01</a> - streamed on May 16, 2020. <br />
-                Music and visuals, both live by J3ZZ</i>
-              </p>
-            </div>
-          </div>
           <hr>
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-              <h3>Stereo Woods (music video)</h3>
+              <h3>A Drop in the Ocean (music video)</h3>
+              <div class="video-container">
+                <iframe src="https://www.youtube-nocookie.com/embed/KXoVQjjpdkc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
               <p>
-                <iframe  src="https://www.youtube-nocookie.com/embed/-DyZlkGGLiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                from 00:00 track 1. Erosion <br />
+                from 12:05 track 2. Downdrift  <br />
+                from 25:33 track 3. High Tide <br />
               </p>
               <p>
-      				I made this video with friends. We offer it to you with all our hearts in these rough times. Thanks to Diego Parbuono (film making), Joe Black (camera), Erika Di Benedetto (photography), Zsolt László Kiss (audio recording). </p>
-              <p>
-                <a href="https://distrokid.com/hyperfollow/j3zz1/stereo-woods" class="btn btn-default btn-lg"><span class="network-name">LISTEN / STREAM</span></a>
+                <a href="https://distrokid.com/hyperfollow/j3zz1/a-drop-in-the-ocean" class="btn btn-default btn-lg"><span class="network-name">LISTEN / STREAM</span></a>
               </p>
               <p>
-      				<i>Music video by J3ZZ performing STEREO WOODS. © 2020 Watcha Studios</i> <br />
-      				<i>With the support of Watcha Studios, CineSaibai and Monkey Island Studio.</i>
-      				</p>
+                <i>Music video by J3ZZ performing A Drop in the Ocean. © 2020 Watcha Studios</i> <br />
+                <i>Recorded live during <a href="https://youtu.be/6uYOBfwy8mQ?t=5262">#j3zzlab 01</a> - streamed on May 16, 2020. <br />
+                  Music and visuals, both live by J3ZZ</i>
+                </p>
               </div>
             </div>
-        </div>
-      </div>
-    </section>
+            <hr>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2">
+                <h3>Stereo Woods (music video)</h3>
+                <div class="video-container">
+                  <iframe src="https://www.youtube-nocookie.com/embed/-DyZlkGGLiE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <p>
+                  I made this video with friends. We offer it to you with all our hearts in these rough times. Thanks to Diego Parbuono (film making), Joe Black (camera), Erika Di Benedetto (photography), Zsolt László Kiss (audio recording). </p>
+                  <p>
+                    <a href="https://distrokid.com/hyperfollow/j3zz1/stereo-woods" class="btn btn-default btn-lg"><span class="network-name">LISTEN / STREAM</span></a>
+                  </p>
+                  <p>
+                    <i>Music video by J3ZZ performing STEREO WOODS. © 2020 Watcha Studios</i> <br />
+                    <i>With the support of Watcha Studios, CineSaibai and Monkey Island Studio.</i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
