--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,8 +3,6 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2>Contact</h2>
-      <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
-      </p> -->
       <ul class="list-inline banner-social-buttons">
         {% for network in site.social %}
         <li>
@@ -12,8 +10,37 @@
         </li>
         {% endfor %}
       </ul>
-      <hr>
-      <p>For concert booking</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h3>for booking</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-lg-offset-2">
+      <p class="font-weight-bold">#1 💎 J3ZZ show
+        <br>
+        <small><i>Solo / Band / Strings</i></small>
+      </p>
+      <p class="font-weight-bold">#2 🎻 Hybris show
+        <br>
+        <small><i>Violin-cello improvisative</i></small>
+      </p>
+      <p class="font-weight-bold">#3 🎧 DJ - violin set
+        <br>
+        <small><i>chill ambient</i></small>
+      </p>
+      <p class="font-weight-bold">#4 🌱 Vibrotanica show - Plants based
+        <br>
+        <small><i>site-specific visuals, interdisciplinary, 3D spatial sound</i></small>
+      </p>
+      <p class="font-weight-bold">#5 👌 custom audiovisual installations
+        <br>
+        <small><i>site-specific</i></small>
+      </p>
+    </div>
+    <div class="col-lg-4 col-lg-offset-0">
       <form action="https://formspree.io/{{ site.email }}" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
@@ -26,7 +53,7 @@
         </div>
         <div class="form-group">
           <label for="message">Message</label>
-          <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+          <textarea name="message" class="form-control" id="message" rows="12"></textarea>
         </div>
         <input type="submit" value="Send Message" class="btn btn-default btn-lg" />
         <input type="reset" value="Clear" class="btn btn-default btn-lg"/>
