adding 404 page -- https://help.github.com/en/github/working-with-github-pages/creating-a-custom-404-page-for-your-github-pages-site

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -264,6 +264,18 @@ a:focus {
     -o-background-size: cover;
 }
 
+.error-section {
+    width: 100%;
+    padding: 50px 0;
+    color: #fff;
+    background: url(/img/error-bg.jpg) no-repeat center center scroll;
+    background-color: {{ site.color.primary-dark }};
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 .music-releases-section {
     width: 100%;
     padding: 50px 0;
