--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,28 +18,28 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="{{ site.url }}#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#music-releases">Music</a>
+                        <a class="page-scroll" href="{{ site.url }}#music-releases">Music</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#tour">Tour</a>
+                        <a class="page-scroll" href="{{ site.url }}#tour">Tour</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#video-releases">Video</a>
+                        <a class="page-scroll" href="{{ site.url }}#video-releases">Video</a>
                     </li>
                     <li>
                         <a href="https://vibrotanica.j3zz.com">VIBROTANICA</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#j3zzlab">#J3ZZLAB</a>
+                        <a class="page-scroll" href="{{ site.url }}#j3zzlab">#J3ZZLAB</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#hybris">HYBRIS</a>
+                        <a class="page-scroll" href="{{ site.url }}#hybris">HYBRIS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="{{ site.url }}#contact">Contact</a>
                     </li>
                     <li>
                         <a href="http://store.j3zz.com">Store</a>
