--- a/docs/style.css
+++ b/docs/style.css
@@ -269,6 +269,18 @@ a:focus {
     -o-background-size: cover;
 }
 
+.error-section {
+    width: 100%;
+    padding: 50px 0;
+    color: #fff;
+    background: url(/img/error-bg.jpg) no-repeat center center scroll;
+    background-color: #000000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 .music-releases-section {
     width: 100%;
     padding: 50px 0;
