minor updates in text content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About J3ZZ</h2>
+                <p>Some call me <a href="https://www.jeromelithiaote.com" target=_blank>Jérôme Li-Thiao-Té</a>.</p>
                 <p>I see myself as a protean artist, as much as a performer – violinist, composer, producer and sound designer - as in the themes of my work, where the topics of gathering and legitimacy constantly intersect with those of dialogue and sharing of codes. This permeability is also part of the musician and the engineer in me, providing a know-how acquired by multiple experiences in the four corners of the world.</p>
                 <h3>Inspirations</h3>
                 <p>Through many years of travelling and experimentation, embracing interdisciplinary practices, I have found my own natural way of expression as a sound artist blending electronics, <a target=_blank href="https://www.jeromelithiaote.com/projects/tags/installation">installations</a>, soundscapes, folk instruments, movements, visuals and improvisation within the scope of performing arts.</p>
