--- a/_includes/j3zzlab.html
+++ b/_includes/j3zzlab.html
@@ -25,7 +25,7 @@
   <h3>Stream the past #J3ZZLAB 👇</h3>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h4>#J3ZZLAB 02</h4>
+      <h4>#J3ZZLAB 02 (livestream)</h4>
       <p>
         <i>Streamed live on May 23, 2020</i> <br>
         listening to plants and playing along / improvising between analog and digital / video synthesis projection
@@ -37,7 +37,7 @@
   </div>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h4>#J3ZZLAB 01</h4>
+      <h4>#J3ZZLAB 01 (livestream)</h4>
       <p>
         <i>Streamed live on May 16, 2020</i><br />
         improvising between analog and digital / exploring music visualization
@@ -49,7 +49,7 @@
   </div>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h4>#J3ZZLAB 00</h4>
+      <h4>#J3ZZLAB 00 (livestream)</h4>
       <p>
         <i>Streamed live on May 9, 2020</i><br />
         improvising between analog and digital
