--- a/_includes/video-releases.html
+++ b/_includes/video-releases.html
@@ -14,7 +14,7 @@
         <hr>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
-            <h3>The song of the nightingale</h3>
+            <h3>The song of the nightingale (music video)</h3>
             <div class="video-container">
               <iframe src="https://www.youtube-nocookie.com/embed/463eDgFe3V4 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
