Adding newsletter form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% include j3zzlab.html %}
     {% include hybris.html %}
     {% include contact.html %}
+    {% include newsletter-signup.html %}
     {% include map.html %}
     {% include footer.html %}
     {% include js.html %}
