adding external newsletter landing page to nav bar / menu

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,6 +42,9 @@
                         <a class="page-scroll" href="{{ site.url }}#contact">Contact</a>
                     </li>
                     <li>
+                        <a href="https://mailchi.mp/487c90476402/vim4j3n2m1">Newsletter</a>
+                    </li>
+                    <li>
                         <a href="http://store.j3zz.com">Store</a>
                     </li>
                     <li>
