update nav bar and order of the content on single main page

--- a/_includes/music-releases.html
+++ b/_includes/music-releases.html
@@ -3,6 +3,12 @@
 <section id="music-releases" class="content-section text-center">
   <div class="music-releases-section">
     <div class="container">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Store</h2>
+        <p>Support my work. Buy merch :-)</p>
+        <a href="http://store.j3zz.com" class="btn btn-default btn-lg" >Store</a>
+        <hr>
+      </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Music releases</h2>
