--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,22 +18,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.url }}#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="{{ site.url }}#music-releases">Music</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="{{ site.url }}#tour">Tour</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="{{ site.url }}#video-releases">Video</a>
                     </li>
                     <li>
-                        <a href="https://vibrotanica.j3zz.com">VIBROTANICA</a>
+                        <a class="page-scroll" href="{{ site.url }}#tour">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.url }}#j3zzlab">#J3ZZLAB</a>
+                        <a class="page-scroll" href="{{ site.url }}#music-releases">Music & store</a>
+                    </li>
+                    <!-- <li>
+                        <a class="page-scroll" href="{{ site.url }}#about">About</a>
+                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="{{ site.url }}#j3zzlab">#j3zzlab stream</a>
+                    </li>
+                    <li>
+                        <a href="https://vibrotanica.j3zz.com">VIBROTANICA</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="{{ site.url }}#hybris">HYBRIS</a>
@@ -41,12 +41,9 @@
                     <li>
                         <a class="page-scroll" href="{{ site.url }}#contact">Contact</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://mailchi.mp/487c90476402/vim4j3n2m1">Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="http://store.j3zz.com">Store</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="https://www.jeromelithiaote.com/donations">Donations</a>
                     </li>
