--- a/_includes/j3zzlab.html
+++ b/_includes/j3zzlab.html
@@ -2,7 +2,7 @@
 <section id="j3zzlab" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>#J3ZZLAB</h2>
+      <h2>#J3ZZLAB Stream</h2>
       <p>
         A design without design. A box without a frame. This is a playground. A playlab. For all of us to experiment.
         The main idea of #J3ZZLAB is to provide a platform to each and everyone (listener, artist, social worker, scientist, kids etc.)
