--- a/_includes/tour.html
+++ b/_includes/tour.html
@@ -4,6 +4,11 @@
           <div class="col-lg-8 col-lg-offset-2">
               <h2>Tour</h2>
               <p>Book your tickets to the shows</p>
+              <p>
+                <a class="page-scroll btn btn-default btn-lg" href="{{ site.url }}#hybris" >Hybris</a>
+                <a class="btn btn-default btn-lg" href="http://vibrotanica.j3zz.com">Vibrotanica</a>
+              </p>
+
               <ul class="list-inline banner-social-buttons">
               {% for network in site.tour %}
               <li>
