--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
 
                         <p class="intro-text">{{ site.description }}<br>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#video-releases" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
