updating j3zzlab section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,20 +24,20 @@
                         <a class="page-scroll" href="{{ site.url }}#tour">Tickets</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="{{ site.url }}#j3zzlab">stream</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="{{ site.url }}#music-releases">Music & store</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="{{ site.url }}#about">About</a>
                     </li> -->
-                    <li>
-                        <a class="page-scroll" href="{{ site.url }}#j3zzlab">#j3zzlab stream</a>
-                    </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://vibrotanica.j3zz.com">VIBROTANICA</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="{{ site.url }}#hybris">HYBRIS</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="{{ site.url }}#contact">Contact</a>
                     </li>
