--- a/_includes/j3zzlab.html
+++ b/_includes/j3zzlab.html
@@ -2,14 +2,19 @@
 <section id="j3zzlab" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>#J3ZZLAB Stream</h2>
+      <h2>on/off-line #J3ZZLAB events</h2>
+      <p>
+        Join #J3ZZLAB, where I focus everytime on a different topic, with a different format (workshop, talk, performance...)
+      </p>
+        <a class="btn btn-default btn-lg" href="https://www.youtube.com/watch?v=wJuN7f5t6kw&list=PLSIiNC2Dc0AReMSkY0HfNuZIRiUFryWz2">Want to check how it looks ?</a>
+        <br><br>
       <p>
         A design without design. A box without a frame. This is a playground. A playlab. For all of us to experiment.
         The main idea of #J3ZZLAB is to provide a platform to each and everyone (listener, artist, social worker, scientist, kids etc.)
         to learn by doing. Online and offline.
         This idea was born during the Covid-19 rough times that we are all facing.
       </p>
-      <h3>Look for the upcoming #J3ZZLAB</h3>
+      <h3>Don't want to miss next #J3ZZLAB events?</h3>
       <ul class="list-inline banner-social-buttons">
         {% for network in site.tour %}
         <li>
@@ -17,11 +22,12 @@
         </li>
         {% endfor %}
       </ul>
-      <p>It is a serie of offline/online events focusing everytime on a different topic with a different format (workshop, talk, performance...)
-      </p>
+      <!-- <p>
+      It is a serie of offline/online events focusing everytime on a different topic with a different format (workshop, talk, performance...)
+      </p> -->
     </div>
   </div>
-  <hr>
+  <!-- <hr>
   <h3>Stream the past #J3ZZLAB 👇</h3>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
@@ -58,5 +64,5 @@
         <iframe src="https://www.youtube-nocookie.com/embed/COnVarxXADE " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
